extract: fix extaction of files without data

https://bugzilla.gnome.org/show_bug.cgi?id=763376

Signed-off-by: Marc-André Lureau <marcandre.lureau@gmail.com>